--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
           package="uk.ac.cam.crim.inspiringfutures">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -39,12 +40,14 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".Notification.BootReceiver">
+        <receiver android:name=".Services.BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name=".Notification.ReminderService"/>
+
+        <service android:name=".Services.SyncService"/>
+        <service android:name=".Services.ReminderService"/>
     </application>
 
 </manifest>
